--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
+    "export-from-json": "^1.1.4",
     "mdbreact": "^4.22.0",
+    "node-modules": "^1.0.1",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
@@ -15,6 +17,7 @@
     "react": "^16.4.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.4.1",
+    "react-json-excel": "^1.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.0",
